--- a/index.html
+++ b/index.html
@@ -17,6 +17,50 @@
             overflow: hidden;
         }
 
+        .progress-bar {
+            display: flex;
+            justify-content: space-between;
+            gap: 4px;
+            width: 100%;
+            height: 12px;
+            margin-bottom: 20px;
+            background-color: transparent;
+        }
+
+        .progress-segment {
+            flex: 1;
+            background-color: #ddd;
+            transition: background-color 0.3s ease;
+            height: 100%;
+        }
+
+        .progress-segment:first-child {
+            border-top-left-radius: 6px;
+            border-bottom-left-radius: 6px;
+        }
+
+        .progress-segment:last-child {
+            border-top-right-radius: 6px;
+            border-bottom-right-radius: 6px;
+        }
+
+        .progress-segment.filled {
+            background: linear-gradient(to right, #FCD307, #FFBC00);
+        }
+
+        .progress-segment.flashing {
+            animation: flash 1s infinite;
+        }
+
+        @keyframes flash {
+            0%, 100% {
+                background-color: #ddd;
+            }
+            50% {
+                background-color: rgba(252, 211, 7, 0.7);
+            }
+        }
+
         .title-container {
             text-align: center;
             margin-bottom: 20px;
@@ -180,13 +224,6 @@
             font-size: 18px;
         }
 
-        .image-container img {
-            max-width: 70%;
-            height: auto;
-            border-radius: 30px;
-            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-        }
-
         .button-container {
             display: flex;
             justify-content: center;
@@ -204,6 +241,15 @@
 </head>
 <body>
     <div class="game-container">
+        <div class="progress-bar" id="progress-bar">
+            <div class="progress-segment filled"></div>
+            <div class="progress-segment filled"></div>
+            <div class="progress-segment filled"></div>
+            <div class="progress-segment filled"></div>
+            <div class="progress-segment flashing"></div>
+            <div class="progress-segment"></div>
+            <div class="progress-segment"></div>
+        </div>
         <div id="questionContainer" class="question-container">
             <div class="title-container">
                 <h1 id="gameTitle">What is WeSpark?</h1>
@@ -221,7 +267,7 @@
             <div id="feedback"></div>
         </div>
     </div>
-    <canvas id="confetti-canvas" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; z-index: 100;"></canvas>
+    <canvas id="confetti-canvas" style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 100vmin; height: 100vmin; pointer-events: none; z-index: 100;"></canvas>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
     <script>
         let questions = [
@@ -240,25 +286,34 @@
         let selectedOption = null;
         let confettiInterval;
 
+        function updateProgressBar() {
+            const segments = document.querySelectorAll(".progress-segment");
+            segments.forEach((segment, index) => {
+                segment.classList.remove('flashing');
+                if (index < 5) {
+                    segment.classList.add('filled');
+                }
+                if (index === 5) {
+                    segment.classList.add('flashing');
+                }
+            });
+        }
+
         function loadQuestion(index) {
             const question = questions[index];
             const questionContainer = document.getElementById('questionContainer');
-
             if (question) {
                 document.getElementById('feedback').textContent = '';
                 document.getElementById('feedback').className = '';
                 selectedOption = null;
-
                 if (question.questionImage) {
                     document.getElementById('questionImage').src = question.questionImage;
                     document.getElementById('questionImage').style.display = 'block';
                 } else {
                     document.getElementById('questionImage').style.display = 'none';
                 }
-
                 const optionsContainer = document.getElementById('optionsForm');
                 optionsContainer.innerHTML = '';
-
                 question.options.forEach((option, i) => {
                     const button = document.createElement('button');
                     button.className = 'option-button';
@@ -273,7 +328,6 @@
                     };
                     optionsContainer.appendChild(button);
                 });
-
                 questionContainer.classList.add('enter');
                 setTimeout(() => {
                     questionContainer.classList.remove('enter');
@@ -295,12 +349,13 @@
                     correctMessage.textContent = 'Correct!';
                     feedbackElement.innerHTML = '';
                     feedbackElement.appendChild(correctMessage);
+
                     startConfetti();
 
                     setTimeout(() => {
                         correctMessage.style.opacity = '0';
                         setTimeout(() => {
-                            submitButton.style.display = 'none'; // Hide the Submit Answer button
+                            submitButton.style.display = 'none';
                             const continueButton = document.createElement('button');
                             continueButton.className = 'continue-pill';
                             continueButton.textContent = 'Continue?';
@@ -350,15 +405,17 @@
         }
 
         function redirectToWorkPage() {
-            window.location.href = 'TRUEFALSEBETTER.html'; // Change this to the desired URL
+            window.location.href = 'TRUEFALSEBETTER.html';
         }
 
         function startConfetti() {
             const canvas = document.getElementById('confetti-canvas');
             const myConfetti = confetti.create(canvas, { resize: true, useWorker: true });
+
             if (confettiInterval) {
                 clearInterval(confettiInterval);
             }
+
             let count = 0;
             const maxCount = 3;
             confettiInterval = setInterval(() => {
@@ -372,6 +429,8 @@
                     clearInterval(confettiInterval);
                 }
             }, 1000);
+
+            updateProgressBar();
         }
 
         document.addEventListener('DOMContentLoaded', function() {
