--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-Juego del logo:
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -34,21 +32,21 @@ Juego del logo:
             line-height: 1.6;
             position: relative;
             overflow-x: hidden;
-            padding: 20px;
+            padding: 5vmin;
         }
 
         .game-wrapper {
             width: 90vmin;
             height: 90vmin;
-            max-width: 600px;
-            max-height: 600px;
+            max-width: 100%;
+            max-height: 100%;
         }
 
         .game-container {
             background-color: var(--white);
             border-radius: 4vmin;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-            padding: 25px;
+            padding: 5vmin;
             width: 100%;
             height: 100%;
             text-align: center;
@@ -60,10 +58,10 @@ Juego del logo:
         .progress-bar {
             display: flex;
             justify-content: space-between;
-            gap: 4px;
+            gap: 0.5vmin;
             width: 100%;
-            height: 12px;
-            margin-bottom: 20px;
+            height: 1.5vmin;
+            margin-bottom: 3vmin;
             background-color: transparent;
         }
 
@@ -75,17 +73,17 @@ Juego del logo:
         }
 
         .progress-segment:first-child {
-            border-top-left-radius: 6px;
-            border-bottom-left-radius: 6px;
+            border-top-left-radius: 0.8vmin;
+            border-bottom-left-radius: 0.8vmin;
         }
 
         .progress-segment:last-child {
-            border-top-right-radius: 6px;
-            border-bottom-right-radius: 6px;
+            border-top-right-radius: 0.8vmin;
+            border-bottom-right-radius: 0.8vmin;
         }
 
         .progress-segment.filled {
-            background: linear-gradient(to right, #FCD307, #FFBC00);
+            background: linear-gradient(to right, var(--yellow), var(--orange));
         }
 
         .progress-segment.flashing {
@@ -103,13 +101,13 @@ Juego del logo:
 
         .title-container {
             text-align: center;
-            margin-bottom: 20px;
+            margin-bottom: 3vmin;
         }
 
         .title-container h1 {
             color: var(--black);
             font-size: clamp(1.8rem, 4vw, 2.2rem);
-            margin-bottom: 10px;
+            margin-bottom: 1vmin;
         }
 
         .title-container h2 {
@@ -120,17 +118,17 @@ Juego del logo:
         .image-container {
             display: flex;
             justify-content: center;
-            margin-bottom: 20px;
+            margin-bottom: 3vmin;
         }
 
         .image-container img {
             max-width: 100%;
-            max-height: 300px;
+            max-height: 30vmin;
             height: auto;
-            border-radius: 8px;
-            margin-top: 10px;
+            border-radius: 2vmin;
+            margin-top: 1vmin;
             display: block;
-            border: 1px solid var(--gray);
+            border: 0.2vmin solid var(--gray);
         }
 
         .options-container {
@@ -143,9 +141,9 @@ Juego del logo:
         .option-button {
             background-color: var(--yellow);
             border: none;
-            border-radius: 50px;
-            padding: 15px;
-            margin: 10px 0;
+            border-radius: 10vmin;
+            padding: 2vmin;
+            margin: 1vmin 0;
             cursor: pointer;
             transition: background-color 0.3s, transform 0.2s;
             width: 80%;
@@ -165,30 +163,30 @@ Juego del logo:
         }
 
         .option-circle {
-            width: 20px;
-            height: 20px;
+            width: 2vmin;
+            height: 2vmin;
             border-radius: 50%;
             background-color: var(--white);
-            border: 3px solid var(--black);
-            margin-right: 10px;
+            border: 0.5vmin solid var(--black);
+            margin-right: 2vmin;
         }
 
         .option-button.selected .option-circle {
             background-color: #3a3a3a;
-            border: 3px solid var(--black);
+            border: 0.5vmin solid var(--black);
         }
 
         button {
             background-color: var(--yellow);
             color: var(--black);
             border: none;
-            border-radius: 5px;
+            border-radius: 1.5vmin;
             cursor: pointer;
             font-weight: bold;
-            padding: 10px 20px;
-            margin-top: 10px;
+            padding: 1.5vmin 3vmin;
+            margin-top: 1vmin;
             transition: background-color 0.3s;
-            font-size: 18px;
+            font-size: 3vmin;
         }
 
         button:hover {
@@ -197,10 +195,10 @@ Juego del logo:
 
         #feedback {
             font-weight: bold;
-            margin-top: 20px;
+            margin-top: 3vmin;
             font-size: clamp(1.1rem, 2.5vw, 1.3rem);
-            padding: 10px;
-            border-radius: 5px;
+            padding: 1vmin;
+            border-radius: 1.5vmin;
         }
 
         .correct-feedback {
@@ -215,10 +213,10 @@ Juego del logo:
 
         .pill {
             display: inline-block;
-            padding: 8px 16px;
-            border-radius: 20px;
+            padding: 1.5vmin 3vmin;
+            border-radius: 5vmin;
             font-weight: bold;
-            margin: 5px;
+            margin: 1vmin;
         }
 
         .correct-pill {
@@ -230,13 +228,12 @@ Juego del logo:
             background-color: #FFCDD2;
             color: var(--red);
             border: none;
-            border-radius: 20px;
+            border-radius: 5vmin;
             cursor: pointer;
             font-weight: bold;
-            padding: 10px 20px;
-            margin-top: 10px;
+            padding: 1.5vmin 3vmin;
+            margin-top: 1vmin;
             transition: background-color 0.3s;
-            font-size: 18px;
         }
 
         .try-again-pill:hover {
@@ -247,26 +244,25 @@ Juego del logo:
             background-color: var(--yellow);
             color: var(--black);
             border: none;
-            border-radius: 20px;
+            border-radius: 5vmin;
             cursor: pointer;
             font-weight: bold;
-            padding: 10px 20px;
-            margin-top: 10px;
+            padding: 1.5vmin 3vmin;
+            margin-top: 1vmin;
             transition: background-color 0.3s;
-            font-size: 18px;
         }
 
         .button-container {
             display: flex;
             justify-content: center;
-            gap: 10px;
-            margin-top: 10px;
+            gap: 1.5vmin;
+            margin-top: 1vmin;
         }
 
         @media (min-width: 768px) {
             .game-container {
                 max-width: 600px;
-                padding: 30px;
+                padding: 3vmin;
             }
         }
     </style>
@@ -315,7 +311,6 @@ Juego del logo:
                 ]
             }
         ];
-
         let currentQuestionIndex = 0;
         let selectedOption = null;
         let confettiInterval;
@@ -375,7 +370,6 @@ Juego del logo:
             const feedbackElement = document.getElementById('feedback');
             const buttonContainer = document.querySelector('.button-container');
             const submitButton = document.getElementById('submitButton');
-
             if (selectedOption) {
                 if (selectedOption.correct) {
                     const correctMessage = document.createElement('div');
@@ -383,9 +377,7 @@ Juego del logo:
                     correctMessage.textContent = 'Correct!';
                     feedbackElement.innerHTML = '';
                     feedbackElement.appendChild(correctMessage);
-
                     startConfetti();
-
                     setTimeout(() => {
                         correctMessage.style.opacity = '0';
                         setTimeout(() => {
@@ -397,7 +389,6 @@ Juego del logo:
                                 redirectToWorkPage();
                             };
                             buttonContainer.appendChild(continueButton);
-
                             let timeLeft = 10;
                             const timer = setInterval(() => {
                                 timeLeft--;
@@ -445,11 +436,9 @@ Juego del logo:
         function startConfetti() {
             const canvas = document.getElementById('confetti-canvas');
             const myConfetti = confetti.create(canvas, { resize: true, useWorker: true });
-
             if (confettiInterval) {
                 clearInterval(confettiInterval);
             }
-
             let count = 0;
             const maxCount = 3;
             confettiInterval = setInterval(() => {
@@ -463,7 +452,6 @@ Juego del logo:
                     clearInterval(confettiInterval);
                 }
             }, 1000);
-
             updateProgressBar();
         }
 
