--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
     }
 
     function redirectToWorkPage() {
-      window.location.href = 'https://levi5171.wixstudio.com/my-site-1/blank-7';
+      window.location.href = 'https://l3v145431.github.io/consolaws.github.io/';
     }
 
     function startConfetti() {
